--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react": "17.0.1",
     "react-confetti": "^6.0.1",
     "react-dom": "17.0.1",
+    "react-dom-confetti": "^0.2.0",
+    "react-native-confetti-cannon": "^1.5.2",
     "react-scripts": "4.0.0",
     "react-speech-kit": "^3.0.1",
     "react-use": "^17.1.1",
