--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "keywords": [],
   "main": "src/index.tsx",
   "dependencies": {
+    "@hyperjumptech/react-native-confetti": "^0.1.1",
     "@types/webrtc": "0.0.26",
     "@types/webspeechapi": "0.0.29",
     "@xstate/inspect": "^0.4.1",
@@ -14,13 +15,21 @@
     "natural": "^4.0.0",
     "node-sass": "^4.14.1",
     "react": "17.0.1",
+    "react-bootstrap": "^1.5.1",
     "react-confetti": "^6.0.1",
     "react-dom": "17.0.1",
     "react-dom-confetti": "^0.2.0",
+    "react-fade-in": "^2.0.1",
+    "react-flip-numbers": "^3.0.5",
     "react-native-confetti-cannon": "^1.5.2",
+    "react-router": "^5.2.0",
     "react-scripts": "4.0.0",
     "react-speech-kit": "^3.0.1",
+    "react-text-loop": "^2.3.0",
+    "react-text-transition": "^1.3.0",
+    "react-typical": "^0.1.3",
     "react-use": "^17.1.1",
+    "use-sound": "^2.0.1",
     "wink-eng-lite-model": "https://github.com/winkjs/wink-eng-lite-model/releases/download/1.1.0/wink-eng-lite-model-1.1.0.tgz",
     "wink-nlp": "^1.2.0",
     "xstate": "4.13.0"
