--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-typical": "^0.1.3",
     "react-use": "^17.1.1",
     "use-sound": "^2.0.1",
+    "windups": "^1.1.9",
     "wink-eng-lite-model": "https://github.com/winkjs/wink-eng-lite-model/releases/download/1.1.0/wink-eng-lite-model-1.1.0.tgz",
     "wink-nlp": "^1.2.0",
     "xstate": "4.13.0"
