--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@xstate/inspect": "^0.4.1",
     "@xstate/react": "1.0.1",
     "fs": "0.0.1-security",
+    "moving-letters": "^1.0.1",
     "natural": "^4.0.0",
     "node-sass": "^4.14.1",
     "react": "17.0.1",
@@ -19,9 +20,12 @@
     "react-confetti": "^6.0.1",
     "react-dom": "17.0.1",
     "react-dom-confetti": "^0.2.0",
+    "react-explode": "^2.0.5",
     "react-fade-in": "^2.0.1",
     "react-flip-numbers": "^3.0.5",
+    "react-moving-text": "0.0.7",
     "react-native-confetti-cannon": "^1.5.2",
+    "react-reveal": "^1.2.2",
     "react-router": "^5.2.0",
     "react-scripts": "4.0.0",
     "react-speech-kit": "^3.0.1",
