--- a/package.json
+++ b/package.json
@@ -17,13 +17,17 @@
     "node-sass": "^4.14.1",
     "react": "17.0.1",
     "react-bootstrap": "^1.5.1",
+    "react-browser-detection": "^1.2.1",
     "react-confetti": "^6.0.1",
+    "react-device-detect": "^1.15.0",
     "react-dom": "17.0.1",
     "react-dom-confetti": "^0.2.0",
     "react-explode": "^2.0.5",
     "react-fade-in": "^2.0.1",
+    "react-favicon": "0.0.18",
     "react-flip-numbers": "^3.0.5",
     "react-moving-text": "0.0.7",
+    "react-native-animated-emoji": "^0.1.4",
     "react-native-confetti-cannon": "^1.5.2",
     "react-reveal": "^1.2.2",
     "react-router": "^5.2.0",
@@ -33,7 +37,9 @@
     "react-text-transition": "^1.3.0",
     "react-typical": "^0.1.3",
     "react-use": "^17.1.1",
+    "reactjs-popup": "^2.0.4",
     "use-sound": "^2.0.1",
+    "uxcore-dialog": "^0.8.9",
     "windups": "^1.1.9",
     "wink-eng-lite-model": "https://github.com/winkjs/wink-eng-lite-model/releases/download/1.1.0/wink-eng-lite-model-1.1.0.tgz",
     "wink-nlp": "^1.2.0",
