--- a/.gitignore
+++ b/.gitignore
@@ -39644,3 +39644,4 @@ node_modules/yocto-queue/license
 node_modules/yocto-queue/package.json
 node_modules/yocto-queue/readme.md
 *.cmd
+src/game_codes/questions.json
