--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "@types/webspeechapi": "0.0.29",
     "@xstate/inspect": "^0.4.1",
     "@xstate/react": "1.0.1",
+    "bootstrap": "^4.6.0",
     "fs": "0.0.1-security",
     "moving-letters": "^1.0.1",
     "natural": "^4.0.0",
     "node-sass": "^4.14.1",
     "react": "17.0.1",
-    "react-bootstrap": "^1.5.1",
+    "react-bootstrap": "^1.5.2",
     "react-browser-detection": "^1.2.1",
     "react-confetti": "^6.0.1",
     "react-device-detect": "^1.15.0",
