--- a/.gitignore
+++ b/.gitignore
@@ -39645,3 +39645,4 @@ node_modules/yocto-queue/package.json
 node_modules/yocto-queue/readme.md
 *.cmd
 src/game_codes/questions.json
+node_modules/.cache/babel-loader/002f44d251d532a2c4d1a44d2197f3c0.json
