--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "main": "src/index.tsx",
   "dependencies": {
     "@hyperjumptech/react-native-confetti": "^0.1.1",
+    "@tippyjs/react": "^4.2.4",
     "@types/webrtc": "0.0.26",
     "@types/webspeechapi": "0.0.29",
     "@xstate/inspect": "^0.4.1",
@@ -39,6 +40,7 @@
     "react-typical": "^0.1.3",
     "react-use": "^17.1.1",
     "reactjs-popup": "^2.0.4",
+    "tippy.js": "^6.3.1",
     "use-sound": "^2.0.1",
     "uxcore-dialog": "^0.8.9",
     "windups": "^1.1.9",
