Added maxHinted, maxSkipped to dmGame; added dynamic prompt message to button

--- a/.gitignore
+++ b/.gitignore
@@ -56268,3 +56268,68 @@ build/static/js/main.9250477f.chunk.js.map
 build/static/js/main.9250477f.chunk.js
 build/static/js/main.3484906c.chunk.js.map
 build/static/js/main.3484906c.chunk.js
+build/static/js/main.9250477f.chunk.js.map
+build/static/js/main.9250477f.chunk.js
+build/static/js/main.9250477f.chunk.js
+build/static/js/main.9250477f.chunk.js.map
+node_modules/.cache/babel-loader/02ec3d2968c08f8ce31699421a8e6413.json
+node_modules/.cache/babel-loader/0649ab945af5b69fade65b64fc90e9bf.json
+node_modules/.cache/babel-loader/0be9433d56a97d63e7704b1aea478be0.json
+node_modules/.cache/babel-loader/0ca3843801ca20526211b800fd62a2ce.json
+node_modules/.cache/babel-loader/0d2b07597ed111a870f7e80e25d31800.json
+node_modules/.cache/babel-loader/0d483a3c00d316eaf5c717d45a2a57f0.json
+node_modules/.cache/babel-loader/127fba4e0c3f93aef9d3b581c2c3982e.json
+node_modules/.cache/babel-loader/12d5162e6ec2ed56ff18a7324cd33002.json
+node_modules/.cache/babel-loader/14e48af294f981d478a72cdaf15a90fc.json
+node_modules/.cache/babel-loader/212736ef0938fdf41f780f58c3db691a.json
+node_modules/.cache/babel-loader/2771b7ea3aabbf79de9ea81eafdc1925.json
+node_modules/.cache/babel-loader/28775682ee8f7dda262bfb9c4a74c945.json
+node_modules/.cache/babel-loader/2b4684452cbe69f2861d570ac48ffa24.json
+node_modules/.cache/babel-loader/30786cfd375c2fd23b3de2c728bfc583.json
+node_modules/.cache/babel-loader/3300697de1057dda1bb4727bccd26ffe.json
+node_modules/.cache/babel-loader/3497d7a6e22609eaa1ac56d5cc87470e.json
+node_modules/.cache/babel-loader/3ddd7395c967a5f336e44b0cb6538946.json
+node_modules/.cache/babel-loader/43c356ede7504f3e1f99d2b68b7b40d7.json
+node_modules/.cache/babel-loader/45d3d970d8e78ca51699612b21808229.json
+node_modules/.cache/babel-loader/47aca16121d6e3ba2e0ae7f2cf29f575.json
+node_modules/.cache/babel-loader/4d3c0bf2f7f508bfd98a727bf3d20340.json
+node_modules/.cache/babel-loader/59d9e9faa662c809ffa7cad5f227f3b3.json
+node_modules/.cache/babel-loader/5f1d701fb3cc85bf0892e1b65d1aeba1.json
+node_modules/.cache/babel-loader/6209acf824936ff0eeca4ac6e29f9f8e.json
+node_modules/.cache/babel-loader/644291df8f343e0d6bcaff4f42397658.json
+node_modules/.cache/babel-loader/64b7cbac10bf45ed4e1838cc217b4701.json
+node_modules/.cache/babel-loader/69a82bc8af915c48de9899cd2f765e14.json
+node_modules/.cache/babel-loader/6cd31129c52b6085eb995f6dcc785512.json
+node_modules/.cache/babel-loader/6f0bef99763e0eda77844c784624bf5e.json
+node_modules/.cache/babel-loader/70633787dbbb2fb0731d699ce72a67ae.json
+node_modules/.cache/babel-loader/73d2d6acc11f1e99d6c3107366e29d3c.json
+node_modules/.cache/babel-loader/7c8b33c4dd4aff73df572afc68ed2a52.json
+node_modules/.cache/babel-loader/82d6ad9b3af20be1643fd993bfe334d5.json
+node_modules/.cache/babel-loader/844c1ab50e2506d8e6cdbfdd69d76abd.json
+node_modules/.cache/babel-loader/8766b9ff25b340667cfbfd8bc93b39ab.json
+node_modules/.cache/babel-loader/8a867898a1ee88f98453cca0317374e3.json
+node_modules/.cache/babel-loader/8db46c749ce1b081cef78ba7377f123b.json
+node_modules/.cache/babel-loader/8e8aab9df73ea5116b695eae01d6df16.json
+node_modules/.cache/babel-loader/927358712d9862704e53e7fbc4d0eeda.json
+node_modules/.cache/babel-loader/99df1a4070433e7528583aac3b2cc845.json
+node_modules/.cache/babel-loader/9eaf3b12947b3695e03177a257890b06.json
+node_modules/.cache/babel-loader/a053a55dafd80646c54c771c6de5189b.json
+node_modules/.cache/babel-loader/a2c146bd3439acf641cec81d69fb333a.json
+node_modules/.cache/babel-loader/add3b8886b53d47c08954c6449066cec.json
+node_modules/.cache/babel-loader/b84ae564027236c4ce4972ee18eef966.json
+node_modules/.cache/babel-loader/b9ff034400559122d1eb66b09af56781.json
+node_modules/.cache/babel-loader/bc8ae6b354d42c6952e7e0ccbd96745c.json
+node_modules/.cache/babel-loader/bd24605ae988f77edea05243814ec064.json
+node_modules/.cache/babel-loader/c8724d854dcb026798685f08dc214b3b.json
+node_modules/.cache/babel-loader/d1c4c36d0510fc7c2f3512fdb7b1fd65.json
+node_modules/.cache/babel-loader/d3ca5817965e63f954cb49c0f8aa75b4.json
+node_modules/.cache/babel-loader/d3d728f6f407cdac20ac7b74eabfe0e0.json
+node_modules/.cache/babel-loader/d421c28d89c2d7670ecd9ad9e3516f76.json
+node_modules/.cache/babel-loader/d4f938a274e2c0608673d1535eb26de9.json
+node_modules/.cache/babel-loader/daef4d3bf8a0a264f6314339a4da5b85.json
+node_modules/.cache/babel-loader/dc3475ebe0cada7b1fa900ada1f61cb8.json
+node_modules/.cache/babel-loader/e100b41c0cdbd2fa7c7e361907b561d8.json
+node_modules/.cache/babel-loader/edf7fd7fd43af03d83482bd87ca82e5f.json
+node_modules/.cache/babel-loader/f5686d8a5b2f49a65c7374608fe8daf5.json
+node_modules/.cache/babel-loader/fa2d51f6d3546d8aaa95ff8a5a26f524.json
+node_modules/.cache/babel-loader/fd1e547c8dc96a0d1b52e1ab85135253.json
