--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "moving-letters": "^1.0.1",
     "natural": "^4.0.2",
     "node-sass": "^4.14.1",
+    "node-snowball": "^0.6.0",
     "react": "17.0.1",
     "react-bootstrap": "^1.5.2",
     "react-browser-detection": "^1.2.1",
@@ -37,6 +38,7 @@
     "react-typical": "^0.1.3",
     "react-use": "^17.1.1",
     "reactjs-popup": "^2.0.4",
+    "request": "^2.88.2",
     "tippy.js": "^6.3.1",
     "uxcore-dialog": "^0.8.9",
     "windups": "^1.1.9",
